--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             <img src="./img/cpu.jpg" class="d-block w-100" alt="..." />
           </div>
           <div class="carousel-item">
-            <img src="./img/dc.png" class="d-block w-100" alt="..." />
+            <img src="./img/dd.jpg" class="d-block w-100" alt="..." />
           </div>
           <div class="carousel-item">
             <img src="./img/index_aipc.jpeg" class="d-block w-100" alt="..." />
