+修正載入產品時購物車數量顯示bug,所有頁面已添加動態購物車數量顯示

--- a/builder.html
+++ b/builder.html
@@ -315,5 +315,6 @@
       alert(message);
     });
   </script>
+  <script>document.querySelector(".cart-count").textContent = localStorage.getItem("cartQuantity");//更新購物車數量顯示</script>
 </body>
 </html>
