--- a/productList.html
+++ b/productList.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="UTF-8" />
   <title>銀河電腦城 | 產品目錄</title>
-
   <link rel="stylesheet" href="style.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous" />
@@ -49,7 +48,8 @@
           </li>
           <li>
             <a href="cartPage.html" class="cart-icon"><img src="./img/shoppingCart.png" height="50" /><span
-                class="cart-count"></span></a>
+              class="cart-count"></span>
+            </a>
           </li>
         </ul>
       </nav>
@@ -107,7 +107,5 @@
     integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
     crossorigin="anonymous"></script>
   <script src="productListScript.js"></script>
-  <link rel="stylesheet" href="style.css" />
   </head>
-
 </html>
