--- a/login.html
+++ b/login.html
@@ -115,7 +115,7 @@
         <div>
            <a href="cartPage.html" class="cart-icon"
                 ><img src="./img/shoppingCart.png" height="40"
-              /><span class="cart-count-col">99</span></a>
+              /><span class="cart-count-col">0</span></a>
           <button
             class="navbar-toggler"
             type="button"
@@ -216,6 +216,9 @@
       integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
       crossorigin="anonymous"
     ></script>
-    <script>document.querySelector(".cart-count").textContent = localStorage.getItem("cartQuantity");//更新購物車數量顯示</script>
+    <script>
+      document.querySelector(".cart-count").textContent = localStorage.getItem("cartQuantity"); //更新購物車數量顯示
+      document.querySelector(".cart-count-col").textContent = localStorage.getItem("cartQuantity"); //更新手機版購物車數量顯示
+    </script>
   </body>
 </html>
