--- a/productList.html
+++ b/productList.html
@@ -22,7 +22,7 @@
       </h1>
       <div>
         <a href="cartPage.html" class="cart-icon"><img src="./img/shoppingCart.png" height="40" /><span
-            class="cart-count-col">99</span></a>
+            class="cart-count-col">0</span></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
           data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
           aria-expanded="false" aria-label="Toggle navigation">
@@ -48,7 +48,7 @@
           </li>
           <li>
             <a href="cartPage.html" class="cart-icon"><img src="./img/shoppingCart.png" height="50" /><span
-              class="cart-count"></span>
+              class="cart-count">0</span>
             </a>
           </li>
         </ul>
