--- a/register.html
+++ b/register.html
@@ -119,7 +119,7 @@
         <div>
            <a href="cartPage.html" class="cart-icon"
                 ><img src="./img/shoppingCart.png" height="40"
-              /><span class="cart-count-col">99</span></a>
+              /><span class="cart-count-col">0</span></a>
           <button
             class="navbar-toggler"
             type="button"
@@ -154,7 +154,7 @@
             <li>
               <a href="cartPage.html" class="cart-icon"
                 ><img src="./img/shoppingCart.png" height="50"
-              /><span class="cart-count">99</span></a>
+              /><span class="cart-count">0</span></a>
             </li>
           </ul>
         </nav>
@@ -284,6 +284,9 @@
       integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
       crossorigin="anonymous"
     ></script>
-    <script>document.querySelector(".cart-count").textContent = localStorage.getItem("cartQuantity");//更新購物車數量顯示</script>
+    <script>
+      document.querySelector(".cart-count").textContent = localStorage.getItem("cartQuantity"); //更新購物車數量顯示
+      document.querySelector(".cart-count-col").textContent = localStorage.getItem("cartQuantity"); //更新手機版購物車數量顯示
+    </script>
   </body>
 </html>
