--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
       <div class="bg-col">
         <!-- 輪播 文字-->
         <div
-          id="carouselExampleFade_text"
-          class="carousel slide carousel-fade"
-          data-bs-ride="carousel"
+        id="carouselExampleFade_text"
+        class="carousel slide carousel-fade"
+        data-bs-ride="carousel"
         >
           <div
             class="carousel-inner"
@@ -161,12 +161,13 @@
             <!-- <span  style="color:black;">></span> -->
           </button>
         </div>
-
+        
         <!-- 輪播 相片-->
         <div
-          id="carouselExampleFade"
-          class="carousel slide carousel-fade"
-          data-bs-ride="carousel"
+        id="carouselExampleFade"
+        class="carousel slide carousel-fade"
+        data-bs-ride="carousel"
+        style="padding-top: 10px;"
         >
           <div class="carousel-inner">
             <div class="carousel-item active d-flex justify-content-center">
@@ -206,11 +207,11 @@
             <span class="visually-hidden">Next</span>
           </button>
         </div>
-
-        <div class="row">
-          <div class="card">
-            <img class="card-img-top" src=".." alt="Card image cap" />
-            <div class="card-body">
+        
+        <div class="row" style="margin: 0px;">
+        <div class="card">
+          <img class="card-img-top" src=".." alt="Card image cap" />
+          <div class="card-body">
               <h5 class="card-title">
                 GAMING GeForce RTX 5070 顯示卡
                 <span
