--- a/about.html
+++ b/about.html
@@ -1,139 +1,115 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
-  <head>
-    <meta charset="UTF-8" />
-    <title>銀河電腦城 | 關於我們</title>
-    <link rel="stylesheet" href="style.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
-    />
-  </head>
-  <body>
-    <!-- 導航列 -->
 
-    <header class="sticky-top">
-      <!-- collapse container -->
-      <div class="container container-fluid" id="collapseCon">
-        <h1 class="nav_h1" style="font-size: 30px">
-          <img class="icon" src="./img/companyIcon.gif" alt="Company Icon" />
-          <a href="index.html" style="text-decoration: none; color: white"
-            >銀河電腦城</a
-          >
-        </h1>
-        <div>
-          <a href="cartPage.html" class="cart-icon"
-            ><img src="./img/shoppingCart.png" height="40" /><span
-              class="cart-count-col"
-              >0</span
-            ></a
-          >
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarToggleExternalContent"
-            aria-controls="navbarToggleExternalContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="fa fa-bars"></span>
-          </button>
-        </div>
-      </div>
+<head>
+  <meta charset="UTF-8" />
+  <title>銀河電腦城 | 關於我們</title>
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
+</head>
 
-      <!-- normal container -->
-      <div class="container" id="normalCon">
-        <h1 class="nav_h1">
-          <img class="icon" src="./img/companyIcon.gif" alt="Company Icon" />
-          <a href="index.html" style="text-decoration: none; color: white"
-            >銀河電腦城</a
-          >
-        </h1>
-        <nav>
-          <ul>
-            <li><a href="index.html">主頁</a></li>
-            <li><a href="productList.html">產品目錄</a></li>
-            <li><a href="builder.html">自選砌機報價</a></li>
-            <li><a href="about.html">關於我們</a></li>
-            <li>
-              <a href="login.html">登入</a> | <a href="register.html">註冊</a>
-            </li>
-            <li>
-              <a href="cartPage.html" class="cart-icon"
-                ><img src="./img/shoppingCart.png" height="50" /><span
-                  class="cart-count"
-                  id="cart-qty"
-                ></span
-              ></a>
-            </li>
-          </ul>
-        </nav>
+<body>
+  <!-- 導航列 -->
+
+  <header class="sticky-top">
+    <!-- collapse container -->
+    <div class="container container-fluid" id="collapseCon">
+      <h1 class="nav_h1" style="font-size: 30px">
+        <img class="icon" src="./img/companyIcon.gif" alt="Company Icon" />
+        <a href="index.html" style="text-decoration: none; color: white">銀河電腦城</a>
+      </h1>
+      <div>
+        <a href="cartPage.html" class="cart-icon"><img src="./img/shoppingCart.png" height="40" /><span
+            class="cart-count-col">0</span></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+          data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
+          aria-expanded="false" aria-label="Toggle navigation">
+          <span class="fa fa-bars"></span>
+        </button>
       </div>
-      <!-- 導航列extent -->
-      <div class="collapse colbar" id="navbarToggleExternalContent">
+    </div>
+
+    <!-- normal container -->
+    <div class="container" id="normalCon">
+      <h1 class="nav_h1">
+        <img class="icon" src="./img/companyIcon.gif" alt="Company Icon" />
+        <a href="index.html" style="text-decoration: none; color: white">銀河電腦城</a>
+      </h1>
+      <nav>
         <ul>
           <li><a href="index.html">主頁</a></li>
           <li><a href="productList.html">產品目錄</a></li>
           <li><a href="builder.html">自選砌機報價</a></li>
           <li><a href="about.html">關於我們</a></li>
           <li>
-            <a href="login.html">登入</a> |
-            <a href="register.html">註冊</a>
+            <a href="login.html">登入</a> | <a href="register.html">註冊</a>
+          </li>
+          <li>
+            <a href="cartPage.html" class="cart-icon"><img src="./img/shoppingCart.png" height="50" /><span
+                class="cart-count">0</span></a>
           </li>
         </ul>
-      </div>
-      <!-- 導航列end extent -->
-    </header>
-    <!-- 導航列end -->
+      </nav>
+    </div>
+    <!-- 導航列extent -->
+    <div class="collapse colbar" id="navbarToggleExternalContent">
+      <ul>
+        <li><a href="index.html">主頁</a></li>
+        <li><a href="productList.html">產品目錄</a></li>
+        <li><a href="builder.html">自選砌機報價</a></li>
+        <li><a href="about.html">關於我們</a></li>
+        <li>
+          <a href="login.html">登入</a> |
+          <a href="register.html">註冊</a>
+        </li>
+      </ul>
+    </div>
+    <!-- 導航列end extent -->
+  </header>
+  <!-- 導航列end -->
 
-    <main class="about_content">
-      <div>
-        <h2><br />關於我們</h2>
-        <div
-          class="about-section"
-          style="text-align: left; margin: 0 15vw 0 15vw"
-        >
-          <p>
-            <br />
-            銀河電腦城 — 你專屬嘅電腦世界探索站！
-            喺呢度，科技同夢想完美結合，為你打造最齊全、最專業嘅電腦配件選購體驗。
-          </p>
-          <p>無論你係砌機新手，定係電競高手，銀河電腦城都係你嘅最佳拍檔。</p>
-          <p>
-            喺我哋嘅平台，你可以輕鬆揀選由Intel、AMD、NVIDIA等頂尖品牌打造嘅中央處理器、顯示卡、記憶體、儲存裝置等等，滿足你對性能同品質嘅苛刻要求。
-          </p>
-          <p>
-            我哋獨有嘅自選砌機報價系統，更係突破傳統購物模式嘅創新利器。用戶只需簡單幾個步驟，就可以自由組合心水零件，即時計算出精準總價，助你輕鬆打造理想電腦，唔使再為預算煩惱。
-          </p>
-          <p>
-            銀河電腦城唔單止係銷售平台，我哋仲致力提供貼心嘅售後服務同技術支援，確保每位顧客都享有最安心、最專業嘅購物旅程。
-          </p>
-          <p>
-            選擇銀河電腦城，係選擇信心同創新的保障。無論你追求高效運算，還是享受電競激情，銀河電腦城都會陪伴你開啟無限可能嘅科技冒險！
-          </p>
+  <main class="about_content">
+    <div>
+      <h2><br />關於我們</h2>
+      <div class="about-section" style="text-align: left; margin: 0 15vw 0 15vw">
+        <p>
           <br />
-        </div>
+          銀河電腦城 — 你專屬嘅電腦世界探索站！
+          喺呢度，科技同夢想完美結合，為你打造最齊全、最專業嘅電腦配件選購體驗。
+        </p>
+        <p>無論你係砌機新手，定係電競高手，銀河電腦城都係你嘅最佳拍檔。</p>
+        <p>
+          喺我哋嘅平台，你可以輕鬆揀選由Intel、AMD、NVIDIA等頂尖品牌打造嘅中央處理器、顯示卡、記憶體、儲存裝置等等，滿足你對性能同品質嘅苛刻要求。
+        </p>
+        <p>
+          我哋獨有嘅自選砌機報價系統，更係突破傳統購物模式嘅創新利器。用戶只需簡單幾個步驟，就可以自由組合心水零件，即時計算出精準總價，助你輕鬆打造理想電腦，唔使再為預算煩惱。
+        </p>
+        <p>
+          銀河電腦城唔單止係銷售平台，我哋仲致力提供貼心嘅售後服務同技術支援，確保每位顧客都享有最安心、最專業嘅購物旅程。
+        </p>
+        <p>
+          選擇銀河電腦城，係選擇信心同創新的保障。無論你追求高效運算，還是享受電競激情，銀河電腦城都會陪伴你開啟無限可能嘅科技冒險！
+        </p>
+        <br />
       </div>
-    </main>
-    <!-- 頁尾 -->
-    <footer>
-      <div class="container">© 2025 銀河電腦城．版權所有</div>
-    </footer>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
-      crossorigin="anonymous"
-    ></script>
-    <script>
+    </div>
+  </main>
+  <!-- 頁尾 -->
+  <footer>
+    <div class="container">© 2025 銀河電腦城．版權所有</div>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+    crossorigin="anonymous"></script>
+  <script>
+    //如localStorage存有購物車數量
+    if (localStorage.getItem("cartQuantity")) {
       document.querySelector(".cart-count").textContent = localStorage.getItem("cartQuantity"); //更新購物車數量顯示
       document.querySelector(".cart-count-col").textContent = localStorage.getItem("cartQuantity"); //更新手機版購物車數量顯示
-    </script>
-  </body>
+    }
+  </script>
+</body>
+
 </html>
