--- a/cartPage.html
+++ b/cartPage.html
@@ -1,113 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="style.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
-    />
-    <title>銀河電腦城 | 購物車</title>
-   
-  </head>
-  <body>
-   <!-- 導航列 -->
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <header class="sticky-top">
-      <!-- collapse container -->
-      <div class="container container-fluid" id="collapseCon">
-        <h1 class="nav_h1" style="font-size: 30px">
-          <img class="icon" src="./img/companyIcon.gif" alt="Company Icon" />
-          <a href="index.html" style="text-decoration: none; color: white"
-            >銀河電腦城</a
-          >
-        </h1>
-        <div>
-           <a href="cartPage.html" class="cart-icon"
-                ><img src="./img/shoppingCart.png" height="40"
-              /><span class="cart-count-col">0</span></a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarToggleExternalContent"
-            aria-controls="navbarToggleExternalContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="fa fa-bars"></span>
-          </button>
-        </div>
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
+  <title>銀河電腦城 | 購物車</title>
+
+</head>
+
+<body>
+  <!-- 導航列 -->
+
+  <header class="sticky-top">
+    <!-- collapse container -->
+    <div class="container container-fluid" id="collapseCon">
+      <h1 class="nav_h1" style="font-size: 30px">
+        <img class="icon" src="./img/companyIcon.gif" alt="Company Icon" />
+        <a href="index.html" style="text-decoration: none; color: white">銀河電腦城</a>
+      </h1>
+      <div>
+        <a href="cartPage.html" class="cart-icon"><img src="./img/shoppingCart.png" height="40" /><span
+            class="cart-count-col">0</span></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+          data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
+          aria-expanded="false" aria-label="Toggle navigation">
+          <span class="fa fa-bars"></span>
+        </button>
       </div>
+    </div>
 
-      <!-- normal container -->
-      <div class="container" id="normalCon">
-        <h1 class="nav_h1">
-          <img class="icon" src="./img/companyIcon.gif" alt="Company Icon" />
-          <a href="index.html" style="text-decoration: none; color: white"
-            >銀河電腦城</a
-          >
-        </h1>
-        <nav>
-          <ul>
-            <li><a href="index.html">主頁</a></li>
-            <li><a href="productList.html">產品目錄</a></li>
-            <li><a href="builder.html">自選砌機報價</a></li>
-            <li><a href="about.html">關於我們</a></li>
-            <li>
-              <a href="login.html">登入</a> | <a href="register.html">註冊</a>
-            </li>
-            <li>
-              <a href="cartPage.html" class="cart-icon"
-                ><img src="./img/shoppingCart.png" height="50"
-              /><span class="cart-count">0</span></a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-      <!-- 導航列extent -->
-      <div class="collapse colbar" id="navbarToggleExternalContent">
+    <!-- normal container -->
+    <div class="container" id="normalCon">
+      <h1 class="nav_h1">
+        <img class="icon" src="./img/companyIcon.gif" alt="Company Icon" />
+        <a href="index.html" style="text-decoration: none; color: white">銀河電腦城</a>
+      </h1>
+      <nav>
         <ul>
           <li><a href="index.html">主頁</a></li>
           <li><a href="productList.html">產品目錄</a></li>
           <li><a href="builder.html">自選砌機報價</a></li>
           <li><a href="about.html">關於我們</a></li>
           <li>
-            <a href="login.html">登入</a> |
-            <a href="register.html">註冊</a>
+            <a href="login.html">登入</a> | <a href="register.html">註冊</a>
+          </li>
+          <li>
+            <a href="cartPage.html" class="cart-icon"><img src="./img/shoppingCart.png" height="50" /><span
+                class="cart-count">0</span></a>
           </li>
         </ul>
-      </div>
-      <!-- 導航列end extent -->
-    </header>
-    <!-- 導航列end -->
-
-
-    <main>
-     
+      </nav>
     </div>
+    <!-- 導航列extent -->
+    <div class="collapse colbar" id="navbarToggleExternalContent">
+      <ul>
+        <li><a href="index.html">主頁</a></li>
+        <li><a href="productList.html">產品目錄</a></li>
+        <li><a href="builder.html">自選砌機報價</a></li>
+        <li><a href="about.html">關於我們</a></li>
+        <li>
+          <a href="login.html">登入</a> |
+          <a href="register.html">註冊</a>
+        </li>
+      </ul>
+    </div>
+    <!-- 導航列end extent -->
+  </header>
+  <!-- 導航列end -->
+  <main>
+    <div class="cartTips">購物車內尚未有任何商品!</div>
     <div id="cartPanel">
     </div>
-    </main>
+  </main>
 
-    <!-- 頁尾  -->
-    <footer>
-      <div class="container">© 2025 銀河電腦城．版權所有</div>
-    </footer>
+  <!-- 頁尾  -->
+  <footer>
+    <div class="container">© 2025 銀河電腦城．版權所有</div>
+  </footer>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
-      crossorigin="anonymous"
-    ></script>
-    <script src="cartPageScript.js"></script>
-  </body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+    crossorigin="anonymous"></script>
+  <script src="cartPageScript.js"></script>
+</body>
+
 </html>
