--- a/login.html
+++ b/login.html
@@ -150,7 +150,7 @@
             <li>
               <a href="cartPage.html" class="cart-icon"
                 ><img src="./img/shoppingCart.png" height="50"
-              /><span class="cart-count">99</span></a>
+              /><span class="cart-count">0</span></a>
             </li>
           </ul>
         </nav>
@@ -217,8 +217,10 @@
       crossorigin="anonymous"
     ></script>
     <script>
+    if (localStorage.getItem("cartQuantity")) {
       document.querySelector(".cart-count").textContent = localStorage.getItem("cartQuantity"); //更新購物車數量顯示
       document.querySelector(".cart-count-col").textContent = localStorage.getItem("cartQuantity"); //更新手機版購物車數量顯示
-    </script>
+    }
+  </script>
   </body>
 </html>
