--- a/index.html
+++ b/index.html
@@ -1,217 +1,271 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
+  <head>
+    <meta charset="UTF-8" />
+    <title>銀河電腦城 | 產品目錄</title>
 
-<head>
-  <meta charset="UTF-8" />
-  <title>銀河電腦城 | 產品目錄</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+    />
+    <style>
+      .text-car {
+        display: flex;
+        align-content: center;
+        justify-content: center;
+      }
 
-  <link rel="stylesheet" href="style.css" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous" />
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
-  <style>
-    .text-car {
-      display: flex;
-      align-content: center;
-      justify-content: center;
-    }
+      .row {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        margin: 20px;
+      }
 
-    .row {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      margin: 20px;
-    }
+      .card {
+        margin: 10px;
+        width: 18rem;
+      }
 
-    .card {
-      margin: 10px;
-      width: 18rem;
-    }
+      .bg-col {
+        background-color: rgb(55, 55, 65);
+      }
+    </style>
+  </head>
 
-    .bg-col {
-      background-color: rgb(55, 55, 65);
-    }
-  </style>
-</head>
+  <body>
+    <!-- 導航列 -->
 
-<body>
-  <!-- 導航列 -->
-
-  <header class="sticky-top">
-    <!-- collapse container -->
-    <div class="container container-fluid" id="collapseCon">
-      <h1 class="nav_h1" style="font-size: 30px">
-        <img class="icon" src="./img/companyIcon.gif" alt="Company Icon" />
-        <a href="index.html" style="text-decoration: none; color: white">銀河電腦城</a>
-      </h1>
-      <div>
-        <a href="cartPage.html" class="cart-icon"><img src="./img/shoppingCart.png" height="40" /><span
-            class="cart-count-col">0</span></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-          data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
-          aria-expanded="false" aria-label="Toggle navigation">
-          <span class="fa fa-bars"></span>
-        </button>
+    <header class="sticky-top">
+      <!-- collapse container -->
+      <div class="container container-fluid" id="collapseCon">
+        <h1 class="nav_h1" style="font-size: 30px">
+          <img class="icon" src="./img/companyIcon.gif" alt="Company Icon" />
+          <a href="index.html" style="text-decoration: none; color: white"
+            >銀河電腦城</a
+          >
+        </h1>
+        <div>
+          <a href="cartPage.html" class="cart-icon"
+            ><img src="./img/shoppingCart.png" height="40" /><span
+              class="cart-count-col"
+              >0</span
+            ></a
+          >
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarToggleExternalContent"
+            aria-controls="navbarToggleExternalContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="fa fa-bars"></span>
+          </button>
+        </div>
       </div>
-    </div>
 
-    <!-- normal container -->
-    <div class="container" id="normalCon">
-      <h1 class="nav_h1">
-        <img class="icon" src="./img/companyIcon.gif" alt="Company Icon" />
-        <a href="index.html" style="text-decoration: none; color: white">銀河電腦城</a>
-      </h1>
-      <nav>
+      <!-- normal container -->
+      <div class="container" id="normalCon">
+        <h1 class="nav_h1">
+          <img class="icon" src="./img/companyIcon.gif" alt="Company Icon" />
+          <a href="index.html" style="text-decoration: none; color: white"
+            >銀河電腦城</a
+          >
+        </h1>
+        <nav>
+          <ul>
+            <li><a href="index.html">主頁</a></li>
+            <li><a href="productList.html">產品目錄</a></li>
+            <li><a href="builder.html">自選砌機報價</a></li>
+            <li><a href="about.html">關於我們</a></li>
+            <li>
+              <a href="login.html">登入</a> | <a href="register.html">註冊</a>
+            </li>
+            <li>
+              <a href="cartPage.html" class="cart-icon"
+                ><img src="./img/shoppingCart.png" height="50" /><span
+                  class="cart-count"
+                  >0</span
+                ></a
+              >
+            </li>
+          </ul>
+        </nav>
+      </div>
+      <!-- 導航列extent -->
+      <div class="collapse colbar" id="navbarToggleExternalContent">
         <ul>
           <li><a href="index.html">主頁</a></li>
           <li><a href="productList.html">產品目錄</a></li>
           <li><a href="builder.html">自選砌機報價</a></li>
           <li><a href="about.html">關於我們</a></li>
           <li>
-            <a href="login.html">登入</a> | <a href="register.html">註冊</a>
-          </li>
-          <li>
-            <a href="cartPage.html" class="cart-icon"><img src="./img/shoppingCart.png" height="50" /><span
-                class="cart-count">0</span></a>
+            <a href="login.html">登入</a> |
+            <a href="register.html">註冊</a>
           </li>
         </ul>
-      </nav>
-    </div>
-    <!-- 導航列extent -->
-    <div class="collapse colbar" id="navbarToggleExternalContent">
-      <ul>
-        <li><a href="index.html">主頁</a></li>
-        <li><a href="productList.html">產品目錄</a></li>
-        <li><a href="builder.html">自選砌機報價</a></li>
-        <li><a href="about.html">關於我們</a></li>
-        <li>
-          <a href="login.html">登入</a> |
-          <a href="register.html">註冊</a>
-        </li>
-      </ul>
-    </div>
-    <!-- 導航列end extent -->
-  </header>
-  <!-- 導航列end -->
-  <main>
-    <div class="bg-col">
-      <!-- 輪播 文字-->
-      <div id="carouselExampleFade_text" class="carousel slide carousel-fade" data-bs-ride="carousel">
-        <div class="carousel-inner" style="background-color: rgb(180, 203, 203)">
-          <div class="carousel-item active text-car">
-            <p class="d-block w-100 text-center" style="color: blue">
-              ~~ 每月優惠 多款電腦零件產品 限定熱賣 立即搜購 ~~
-            </p>
+      </div>
+      <!-- 導航列end extent -->
+    </header>
+    <!-- 導航列end -->
+    <main>
+      <div class="bg-col">
+        <!-- 輪播 文字-->
+        <div
+          id="carouselExampleFade_text"
+          class="carousel slide carousel-fade"
+          data-bs-ride="carousel"
+        >
+          <div
+            class="carousel-inner"
+            style="background-color: rgb(180, 203, 203)"
+          >
+            <div class="carousel-item active text-car">
+              <p class="d-block w-100 text-center" style="color: blue">
+                ~~ 每月優惠 多款電腦零件產品 限定熱賣 立即搜購 ~~
+              </p>
+            </div>
+            <div class="carousel-item text-car">
+              <p class="d-block w-100 text-center" style="color: blue">
+                ~~ 高性能電腦產品 ~~
+              </p>
+            </div>
+            <div class="carousel-item text-car">
+              <p class="d-block w-100 text-center" style="color: blue">
+                ~~ 最新各種電腦配件 ~~
+              </p>
+            </div>
           </div>
-          <div class="carousel-item text-car">
-            <p class="d-block w-100 text-center" style="color: blue">
-              ~~ 高性能電腦產品 ~~
-            </p>
-          </div>
-          <div class="carousel-item text-car">
-            <p class="d-block w-100 text-center" style="color: blue">
-              ~~ 最新各種電腦配件 ~~
-            </p>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExampleFade_text"
+            data-bs-slide="prev"
+          >
+            <!-- <span style="color: black;"><</span> -->
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExampleFade_text"
+            data-bs-slide="next"
+          >
+            <!-- <span  style="color:black;">></span> -->
+          </button>
+        </div>
+
+        <!-- 輪播 相片-->
+        <div
+          id="carouselExampleFade"
+          class="carousel slide carousel-fade"
+          data-bs-ride="carousel"
+          style="padding-top: 10px"
+        >
+          <div class="carousel-inner">
+            <div class="carousel-item active d-flex justify-content-center">
+              <img src="./img/cpu.jpg" class="d-block w-50" alt="CPU Image" />
+            </div>
+            <div class="carousel-item d-flex justify-content-center">
+              <img
+                src="./img/cooling_fan.webp"
+                class="d-block w-50"
+                alt="motherboards"
+              />
+            </div>
+            <div class="carousel-item d-flex justify-content-center">
+              <img
+                src="./img/index_aipc.jpeg"
+                class="d-block w-50"
+                alt="AI PC Image"
+              />
+            </div>
           </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade_text"
-          data-bs-slide="prev">
-          <!-- <span style="color: black;"><</span> -->
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade_text"
-          data-bs-slide="next">
-          <!-- <span  style="color:black;">></span> -->
-        </button>
-      </div>
 
-      <!-- 輪播 相片-->
-      <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel"
-        style="padding-top: 10px;">
-        <div class="carousel-inner">
-          <div class="carousel-item active d-flex justify-content-center">
-            <img src="./img/cpu.jpg" class="d-block w-50" alt="CPU Image" />
-          </div>
-          <div class="carousel-item d-flex justify-content-center">
-            <img src="./img/cooling_fan.webp" class="d-block w-50" alt="motherboards" />
-          </div>
-          <div class="carousel-item d-flex justify-content-center">
-            <img src="./img/index_aipc.jpeg" class="d-block w-50" alt="AI PC Image" />
-          </div>
-        </div>
-      </div>
-
-      <div class="row" style="margin: 0px;">
-        <div class="card">
-          <img class="card-img-top" src=".." alt="Card image cap" />
-          <div class="card-body">
-            <h5 class="card-title">
-              GAMING GeForce RTX 5070 顯示卡
-              <span style="
+        <div class="row" style="margin: 0px">
+          <div class="card">
+            <img class="card-img-top" src=".." alt="Card image cap" />
+            <div class="card-body">
+              <h5 class="card-title">
+                GAMING GeForce RTX 5070 顯示卡
+                <span
+                  style="
                     font-size: 14px;
                     color: rgb(17, 14, 14);
                     background: rgb(10, 212, 26);
-                  ">可預訂
-              </span>
-            </h5>
-            <p class="card-text">最新產品 旗艦級散熱系統 有現貨</p>
-            <a href="#" class="btn btn-primary">立即選購</a>
+                  "
+                  >可預訂
+                </span>
+              </h5>
+              <p class="card-text">最新產品 旗艦級散熱系統 有現貨</p>
+              <a href="#" class="btn btn-primary">立即選購</a>
+            </div>
           </div>
-        </div>
 
-        <div class="card">
-          <img class="card-img-top" src=".." alt="Card image cap" />
-          <div class="card-body">
-            <h5 class="card-title">GAMING GeForce RTX 5070 顯示卡</h5>
-            <span style="
+          <div class="card">
+            <img class="card-img-top" src=".." alt="Card image cap" />
+            <div class="card-body">
+              <h5 class="card-title">GAMING GeForce RTX 5070 顯示卡</h5>
+              <span
+                style="
                   font-size: 14px;
                   color: white;
                   background: red;
                   position: relative;
-                ">
-              熱賣中
-              <img src="./img/hot.png" style="
+                "
+              >
+                熱賣中
+                <img
+                  src="./img/hot.png"
+                  style="
                     position: absolute;
                     right: -110px;
                     bottom: -30px;
                     height: 100px;
-                  " />
-            </span>
-            <p class="card-text">最新產品 旗艦級散熱系統 有現貨</p>
-            <a href="#" class="btn btn-primary">立即選購</a>
-          </div>
-        </div>
-
-        <div class="card">
-          <img class="card-img-top" src=".." alt="Card image cap" />
-          <div class="card-body">
-            <h5 class="card-title">
-              GAMING GeForce RTX 5070 顯示卡
-              <span style="font-size: 14px; color: white; background: orange">
-                ***有折扣
+                  "
+                />
               </span>
-            </h5>
-            <p class="card-text">最新產品 旗艦級散熱系統 有現貨</p>
-            <a href="#" class="btn btn-primary">立即選購</a>
+              <p class="card-text">最新產品 旗艦級散熱系統 有現貨</p>
+              <a href="#" class="btn btn-primary">立即選購</a>
+            </div>
+          </div>
+
+          <div class="card">
+            <img class="card-img-top" src=".." alt="Card image cap" />
+            <div class="card-body">
+              <h5 class="card-title">
+                GAMING GeForce RTX 5070 顯示卡
+                <span style="font-size: 14px; color: white; background: orange">
+                  ***有折扣
+                </span>
+              </h5>
+              <p class="card-text">最新產品 旗艦級散熱系統 有現貨</p>
+              <a href="#" class="btn btn-primary">立即選購</a>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </main>
+    </main>
 
-  <!-- 頁尾 (Retained) -->
-  <footer>
-    <div class="container">© 2025 銀河電腦城．版權所有</div>
-  </footer>
+    <!-- 頁尾 (Retained) -->
+    <footer>
+      <div class="container">© 2025 銀河電腦城．版權所有</div>
+    </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
-    crossorigin="anonymous"></script>
-  <script>
-    if (localStorage.getItem("cartQuantity")) {
-      document.querySelector(".cart-count").textContent = localStorage.getItem("cartQuantity"); //更新購物車數量顯示
-      document.querySelector(".cart-count-col").textContent = localStorage.getItem("cartQuantity"); //更新手機版購物車數量顯示
-    }
-  </script>
-</body>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+      crossorigin="anonymous"
+    ></script>
+    <script src="indexScript.js"></script>
+  </body>
 </html>
