--- a/about.html
+++ b/about.html
@@ -14,6 +14,17 @@
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
 
   <body>
@@ -127,6 +138,7 @@
         <p>
           <strong>電郵 / 商業合作：</strong> galaxy@sky.hk<br />
           <strong>電話：</strong> +852 6666 9999<br />
+          <span class="bi bi-whatsapp" style="color: #25d366"></span>
           <strong>WhatsApp：</strong> +852 6666 9999<br />
           <strong>售後服務：</strong> +852 6666 9999<br />
         </p>
@@ -147,11 +159,10 @@
         <h3>交通工具</h3>
         <p>彩虹地鐵站：A2 出口直行，16號小巴，第二個站落車<br /></p>
 
-        <h3>地圖位置</h3>
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3690.5004662669635!2d114.21241741734454!3d22.334724269457787!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x340406ce855a9e2f%3A0x72f7a3048d66aa39!2z5Z-6552j5pWO5Yu16KGM5pyD5YOx5ZOh5YaN5Z-56KiT5Lit5b-D!5e0!3m2!1szh-TW!2stw!4v1749796464489!5m2!1szh-TW!2stw"
-          width="600"
-          height="450"
+          width="400"
+          height="250"
           style="border: 0"
           allowfullscreen=""
           loading="lazy"
@@ -159,6 +170,43 @@
         ></iframe>
       </section>
     </main>
+
+    <div class="container py-4">
+      <div class="row">
+        <div class="col-sm-3">
+          <div class="follow-us">
+            <img src="./img/gx.jpeg" style="width: 280px" />
+          </div>
+        </div>
+
+        <div class="col-sm-3">
+          <img src="./img/payment.webp" style="width: 300px" />
+        </div>
+
+        <div class="col-sm-4">
+          <p>關注我們</p>
+          <a
+            href="https://www.facebook.com"
+            class="icon-button"
+            target="_blank"
+          >
+            <i class="fab fa-facebook-f"></i
+          ></a>
+          <a
+            href="https://www.instagram.com/"
+            class="icon-button"
+            target="_blank"
+          >
+            <i class="bi bi-instagram"></i
+          ></a>
+          <p>私隱政策 | 使用條款</p>
+          <p>應用程式</p>
+          <img src="./img/googleplay.svg" />
+          <img src="./img/applestore.svg" />
+        </div>
+      </div>
+    </div>
+
     <!-- 頁尾 -->
     <footer>
       <div class="container">© 2025 銀河電腦城．版權所有</div>
