--- a/about.html
+++ b/about.html
@@ -159,7 +159,7 @@
         <h3>交通工具</h3>
         <p>彩虹地鐵站：A2 出口直行，16號小巴，第二個站落車<br /></p>
 
-        <iframe
+        <!-- <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3690.5004662669635!2d114.21241741734454!3d22.334724269457787!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x340406ce855a9e2f%3A0x72f7a3048d66aa39!2z5Z-6552j5pWO5Yu16KGM5pyD5YOx5ZOh5YaN5Z-56KiT5Lit5b-D!5e0!3m2!1szh-TW!2stw!4v1749796464489!5m2!1szh-TW!2stw"
           width="400"
           height="250"
@@ -167,7 +167,7 @@
           allowfullscreen=""
           loading="lazy"
           referrerpolicy="no-referrer-when-downgrade"
-        ></iframe>
+        ></iframe> -->
       </section>
     </main>
 
@@ -179,11 +179,22 @@
           </div>
         </div>
 
+        <div class="col-sm-3">       
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3690.5004662669635!2d114.21241741734454!3d22.334724269457787!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x340406ce855a9e2f%3A0x72f7a3048d66aa39!2z5Z-6552j5pWO5Yu16KGM5pyD5YOx5ZOh5YaN5Z-56KiT5Lit5b-D!5e0!3m2!1szh-TW!2stw!4v1749796464489!5m2!1szh-TW!2stw"
+            width="300"
+            height="180"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+
         <div class="col-sm-3">
           <img src="./img/payment.webp" style="width: 300px" />
         </div>
 
-        <div class="col-sm-4">
+        <div class="col-sm-3">
           <p>關注我們</p>
           <a
             href="https://www.facebook.com"
@@ -204,6 +215,9 @@
           <img src="./img/googleplay.svg" />
           <img src="./img/applestore.svg" />
         </div>
+
+        
+
       </div>
     </div>
 
