--- a/productDetail.html
+++ b/productDetail.html
@@ -8,6 +8,11 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
+
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
 </head>
 
 <body>
@@ -81,10 +86,45 @@
         </div>
     </div>
    </main>
-  <!-- 頁尾 (Retained) -->
+  <!-- 頁尾 -->
+   
   <footer>
     <div class="container">© 2025 銀河電腦城．版權所有</div>
-  </footer>
+  </footer> <div class="container py-4">
+      <div class="row">
+        <div class="col-sm-4">
+          <div class="follow-us">
+            <img src="./img/gx.jpeg" style="width: 100%" />
+          </div>
+        </div>
+
+        <div class="col-sm-4">
+          <img src="./img/payment.webp" style="width: 100%" />
+        </div>
+
+        <div class="col-sm-4">
+          <p style="margin-bottom: 0px;">關注我們</p>
+          <a
+            href="https://www.facebook.com"
+            class="icon-button"
+            target="_blank"
+          >
+            <i class="fab fa-facebook-f"></i
+          ></a>
+          <a
+            href="https://www.instagram.com/"
+            class="icon-button"
+            target="_blank"
+          >
+            <i class="bi bi-instagram"></i
+          ></a>
+          <p style="margin-bottom: 0px;">私隱政策 | 使用條款</p>
+          <p style="margin-bottom: 0px;">應用程式</p>
+          <img src="./img/googleplay.svg" style="width: 45%;" />
+          <img src="./img/applestore.svg" style="width: 45%;"/>
+        </div>
+      </div>
+    </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
     crossorigin="anonymous">
