--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         height: 150px;
       }
       .anima {
+        font-size: 18px;
         animation: changeColor 1s infinite;
       }
       @keyframes changeColor {
@@ -76,8 +77,8 @@
   </head>
 
   <body>
-    <!-- 導航列 -->
 
+    <!-- 導航列 -->
     <header class="sticky-top">
       <!-- collapse container -->
       <div class="container container-fluid" id="collapseCon">
@@ -164,17 +165,17 @@
           style="background-color: rgb(180, 203, 203)"
         >
           <div class="carousel-item active text-car">
-            <p class="d-block w-100 text-center anima" style="color: blue">
+            <p class="d-block w-100 text-center anima" style="margin-bottom: 0px;" >
               ~~ 每月優惠 多款電腦零件產品 限定熱賣 立即搜購 ~~
             </p>
           </div>
           <div class="carousel-item text-car ">
-            <p class="d-block w-100 text-center anima" style="color: blue">
+            <p class="d-block w-100 text-center anima" style="margin-bottom: 0px">
               ~~ 高性能電腦產品 ~~
             </p>
           </div>
           <div class="carousel-item text-car ">
-            <p class="d-block w-100 text-center anima" style="color: blue">
+            <p class="d-block w-100 text-center anima" style="margin-bottom: 0px">
               ~~ 最新各種電腦配件 ~~
             </p>
           </div>
@@ -243,7 +244,7 @@
               <img class="card-img-top" src=".." alt="Card image cap" />
             </div>
             <div class="card-body">
-              <h5 class="card-title overflow-auto" style="height: 50px">
+              <h5 class="card-title overflow-auto" style="height: 100px">
                 GAMING GeForce RTX 5070 顯示卡
               </h5>
               <span
@@ -255,7 +256,7 @@
                 >可預訂
               </span>
 
-              <p class="card-text">最新產品</p>
+              <p class="card-text">最新人氣產品</p>
               <a href="#" class="btn btn-primary">立即選購</a>
             </div>
           </div>
@@ -265,7 +266,7 @@
               <img class="card-img-top" src=".." alt="Card image cap" />
             </div>
             <div class="card-body">
-              <h5 class="card-title overflow-auto" style="height: 50px">
+              <h5 class="card-title overflow-auto" style="height: 100px">
                 GAMING GeForce RTX 5070 顯示卡
               </h5>
               <span
@@ -287,7 +288,7 @@
                   "
                 />
               </span>
-              <p class="card-text">最新產品 旗艦級散熱系統 有現貨</p>
+              <p class="card-text">推薦產品</p>
               <a href="#" class="btn btn-primary">立即選購</a>
             </div>
           </div>
@@ -297,14 +298,14 @@
               <img class="card-img-top" src=".." alt="Card image cap" />
             </div>
             <div class="card-body">
-              <h5 class="card-title overflow-auto" style="height: 50px">
+              <h5 class="card-title overflow-auto" style="height: 100px">
                 GAMING GeForce RTX 5070 顯示卡
               </h5>
               <span style="font-size: 14px; color: white; background: orange">
                 ***有折扣
               </span>
 
-              <p class="card-text">最新產品 旗艦級散熱系統 有現貨</p>
+              <p class="card-text">金牌產品</p>
               <a href="#" class="btn btn-primary">立即選購</a>
             </div>
           </div>
