+購物車總價錢與結帳按鈕

--- a/cartPage.html
+++ b/cartPage.html
@@ -76,6 +76,11 @@
     <div class="cartTips">購物車內尚未有任何商品!</div>
     <div id="cartPanel">
     </div>
+    <div class="cartPayment row justify-content-end">
+      <span class="cartPaymentPrice col-2">總計: $0</span>
+      <button class="btn btn-success col-2" id="checkoutBtn" onclick="window.location.href='checkOut.html'">結帳</button>
+      <button class="btn btn-warning col-2" id="clearCartBtn" onclick="clearCart()">清空</button>
+      </div>
   </main>
 
   <!-- 頁尾  -->
