--- a/about.html
+++ b/about.html
@@ -166,43 +166,45 @@
       </section>
     </main>
 
-    <div class="container py-4">
-      <div class="row">
-        <div class="col-sm-4">
-          <div class="follow-us">
-            <img src="./img/gx.jpeg" style="width: 100%" />
+  
+    <!-- 頁尾 -->
+        <div style="background-color: rgb(240, 235, 235)">
+      <div class="container py-4">
+        <div class="row">
+          <div class="col-sm-4">
+            <div class="follow-us">
+              <img src="./img/gx.jpeg" style="width: 100%" />
+            </div>
           </div>
-        </div>
 
-        <div class="col-sm-4">
-          <img src="./img/payment.webp" style="width: 100%" />
-        </div>
+          <div class="col-sm-4">
+            <img src="./img/payment.webp" style="width: 100%" />
+          </div>
 
-        <div class="col-sm-4">
-          <p style="margin-bottom: 0px;">關注我們</p>
-          <a
-            href="https://www.facebook.com"
-            class="icon-button"
-            target="_blank"
-          >
-            <i class="fab fa-facebook-f"></i
-          ></a>
-          <a
-            href="https://www.instagram.com/"
-            class="icon-button"
-            target="_blank"
-          >
-            <i class="bi bi-instagram"></i
-          ></a>
-          <p style="margin-bottom: 0px;">私隱政策 | 使用條款</p>
-          <p style="margin-bottom: 0px;">應用程式</p>
-          <img src="./img/googleplay.svg" style="width: 45%;" />
-          <img src="./img/applestore.svg" style="width: 45%;"/>
+          <div class="col-sm-4">
+            <p style="margin-bottom: 0px">關注我們</p>
+            <a
+              href="https://www.facebook.com"
+              class="icon-button"
+              target="_blank"
+            >
+              <i class="fab fa-facebook-f"></i
+            ></a>
+            <a
+              href="https://www.instagram.com/"
+              class="icon-button"
+              target="_blank"
+            >
+              <i class="bi bi-instagram"></i
+            ></a>
+            <p style="margin-bottom: 0px">私隱政策 | 使用條款</p>
+            <p style="margin-bottom: 0px">應用程式</p>
+            <img src="./img/googleplay.svg" style="width: 45%" />
+            <img src="./img/applestore.svg" style="width: 45%" />
+          </div>
         </div>
       </div>
     </div>
-
-    <!-- 頁尾 -->
     <footer>
       <div class="container">© 2025 銀河電腦城．版權所有</div>
     </footer>
