--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-  <title>銀河電腦城 | 產品目錄</title>
+    <title>銀河電腦城 | 產品目錄</title>
 
     <link rel="stylesheet" href="style.css" />
     <link
@@ -18,7 +17,7 @@
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
     />
-  
+
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
@@ -77,69 +76,86 @@
         }
       }
     </style>
+  </head>
 
-</head>
+  <body>
+    <!-- 導航列 -->
 
-<body>
-  <!-- 導航列 -->
-
-  <header class="sticky-top">
-    <!-- collapse container -->
-    <div class="container container-fluid" id="collapseCon">
-      <h1 class="nav_h1" style="font-size: 30px">
-        <img class="icon" src="./img/companyIcon.gif" alt="Company Icon" />
-        <a href="index.html" style="text-decoration: none; color: white">銀河電腦城</a>
-      </h1>
-      <div>
-        <a href="cartPage.html" class="cart-icon"><img src="./img/shoppingCart.png" height="40" /><span
-            class="cart-count-col">0</span></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-          data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
-          aria-expanded="false" aria-label="Toggle navigation">
-          <span class="fa fa-bars"></span>
-        </button>
+    <header class="sticky-top">
+      <!-- collapse container -->
+      <div class="container container-fluid" id="collapseCon">
+        <h1 class="nav_h1" style="font-size: 30px">
+          <img class="icon" src="./img/companyIcon.gif" alt="Company Icon" />
+          <a href="index.html" style="text-decoration: none; color: white"
+            >銀河電腦城</a
+          >
+        </h1>
+        <div>
+          <a href="cartPage.html" class="cart-icon"
+            ><img src="./img/shoppingCart.png" height="40" /><span
+              class="cart-count-col"
+              >0</span
+            ></a
+          >
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarToggleExternalContent"
+            aria-controls="navbarToggleExternalContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="fa fa-bars"></span>
+          </button>
+        </div>
       </div>
-    </div>
 
-    <!-- normal container -->
-    <div class="container" id="normalCon">
-      <h1 class="nav_h1">
-        <img class="icon" src="./img/companyIcon.gif" alt="Company Icon" />
-        <a href="index.html" style="text-decoration: none; color: white">銀河電腦城</a>
-      </h1>
-      <nav>
+      <!-- normal container -->
+      <div class="container" id="normalCon">
+        <h1 class="nav_h1">
+          <img class="icon" src="./img/companyIcon.gif" alt="Company Icon" />
+          <a href="index.html" style="text-decoration: none; color: white"
+            >銀河電腦城</a
+          >
+        </h1>
+        <nav>
+          <ul>
+            <li><a href="index.html">主頁</a></li>
+            <li><a href="productList.html">產品目錄</a></li>
+            <li><a href="builder.html">自選砌機報價</a></li>
+            <li><a href="about.html">關於我們</a></li>
+            <li>
+              <a href="login.html">登入</a> | <a href="register.html">註冊</a>
+            </li>
+            <li>
+              <a href="cartPage.html" class="cart-icon"
+                ><img src="./img/shoppingCart.png" height="50" /><span
+                  class="cart-count"
+                  >0</span
+                ></a
+              >
+            </li>
+          </ul>
+        </nav>
+      </div>
+      <!-- 導航列extent -->
+      <div class="collapse colbar" id="navbarToggleExternalContent">
         <ul>
           <li><a href="index.html">主頁</a></li>
           <li><a href="productList.html">產品目錄</a></li>
           <li><a href="builder.html">自選砌機報價</a></li>
           <li><a href="about.html">關於我們</a></li>
           <li>
-            <a href="login.html">登入</a> | <a href="register.html">註冊</a>
-          </li>
-          <li>
-            <a href="cartPage.html" class="cart-icon"><img src="./img/shoppingCart.png" height="50" /><span
-                class="cart-count">0</span></a>
+            <a href="login.html">登入</a> |
+            <a href="register.html">註冊</a>
           </li>
         </ul>
-      </nav>
-    </div>
-    <!-- 導航列extent -->
-    <div class="collapse colbar" id="navbarToggleExternalContent">
-      <ul>
-        <li><a href="index.html">主頁</a></li>
-        <li><a href="productList.html">產品目錄</a></li>
-        <li><a href="builder.html">自選砌機報價</a></li>
-        <li><a href="about.html">關於我們</a></li>
-        <li>
-          <a href="login.html">登入</a> |
-          <a href="register.html">註冊</a>
-        </li>
-      </ul>
-    </div>
-    <!-- 導航列end extent -->
-  </header>
-  <!-- 導航列end -->
- <main style="background-color: rgb(55, 55, 65)">
+      </div>
+      <!-- 導航列end extent -->
+    </header>
+    <!-- 導航列end -->
+    <main style="background-color: rgb(55, 55, 65)">
       <!-- 輪播 文字-->
       <div
         id="carouselExampleFade_text"
@@ -147,26 +163,34 @@
         data-bs-ride="carousel"
       >
         <div
-          class="carousel-inner "
+          class="carousel-inner"
           style="background-color: rgb(180, 203, 203)"
         >
           <div class="carousel-item active text-car">
-            <p class="d-block w-100 text-center anima" style="margin-bottom: 0px;" >
+            <p
+              class="d-block w-100 text-center anima"
+              style="margin-bottom: 0px"
+            >
               ~~ 每月優惠 多款電腦零件產品 限定熱賣 立即搜購 ~~
             </p>
           </div>
-          <div class="carousel-item text-car ">
-            <p class="d-block w-100 text-center anima" style="margin-bottom: 0px">
+          <div class="carousel-item text-car">
+            <p
+              class="d-block w-100 text-center anima"
+              style="margin-bottom: 0px"
+            >
               ~~ 高性能電腦產品 ~~
             </p>
           </div>
-          <div class="carousel-item text-car ">
-            <p class="d-block w-100 text-center anima" style="margin-bottom: 0px">
+          <div class="carousel-item text-car">
+            <p
+              class="d-block w-100 text-center anima"
+              style="margin-bottom: 0px"
+            >
               ~~ 最新各種電腦配件 ~~
             </p>
           </div>
         </div>
-       
       </div>
       <div class="index-container">
         <!-- 輪播 相片-->
@@ -299,50 +323,53 @@
       </div>
     </main>
 
-  <!-- 頁尾  -->
-   <div class="container py-4">
-      <div class="row">
-        <div class="col-sm-4">
-          <div class="follow-us">
-            <img src="./img/gx.jpeg" style="width: 100%" />
+    <!-- 頁尾  -->
+    <div style="background-color: rgb(240, 235, 235)">
+      <div class="container py-4">
+        <div class="row">
+          <div class="col-sm-4">
+            <div class="follow-us">
+              <img src="./img/gx.jpeg" style="width: 100%" />
+            </div>
           </div>
-        </div>
 
-        <div class="col-sm-4">
-          <img src="./img/payment.webp" style="width: 100%" />
-        </div>
+          <div class="col-sm-4">
+            <img src="./img/payment.webp" style="width: 100%" />
+          </div>
 
-        <div class="col-sm-4">
-          <p style="margin-bottom: 0px;">關注我們</p>
-          <a
-            href="https://www.facebook.com"
-            class="icon-button"
-            target="_blank"
-          >
-            <i class="fab fa-facebook-f"></i
-          ></a>
-          <a
-            href="https://www.instagram.com/"
-            class="icon-button"
-            target="_blank"
-          >
-            <i class="bi bi-instagram"></i
-          ></a>
-          <p style="margin-bottom: 0px;">私隱政策 | 使用條款</p>
-          <p style="margin-bottom: 0px;">應用程式</p>
-          <img src="./img/googleplay.svg" style="width: 45%;" />
-          <img src="./img/applestore.svg" style="width: 45%;"/>
+          <div class="col-sm-4">
+            <p style="margin-bottom: 0px">關注我們</p>
+            <a
+              href="https://www.facebook.com"
+              class="icon-button"
+              target="_blank"
+            >
+              <i class="fab fa-facebook-f"></i
+            ></a>
+            <a
+              href="https://www.instagram.com/"
+              class="icon-button"
+              target="_blank"
+            >
+              <i class="bi bi-instagram"></i
+            ></a>
+            <p style="margin-bottom: 0px">私隱政策 | 使用條款</p>
+            <p style="margin-bottom: 0px">應用程式</p>
+            <img src="./img/googleplay.svg" style="width: 45%" />
+            <img src="./img/applestore.svg" style="width: 45%" />
+          </div>
         </div>
       </div>
     </div>
-  <footer>
-    <div class="container">© 2025 銀河電腦城．版權所有</div>
-  </footer>
+    <footer>
+      <div class="container">© 2025 銀河電腦城．版權所有</div>
+    </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
-    crossorigin="anonymous"></script>
-  <script src="indexScript.js"></script>
-</body>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+      crossorigin="anonymous"
+    ></script>
+    <script src="indexScript.js"></script>
+  </body>
 </html>
