+結帳付款按鈕大小

--- a/cartPage.html
+++ b/cartPage.html
@@ -294,7 +294,7 @@
           >
           總計 : HK$<span class="totalPaymentPrice">0</span></span
         >
-        <button class="btn btn-primary" onclick="handlePayment()">付款</button>
+        <button class="btn btn-primary col-2" onclick="handlePayment()">付款</button>
       </div>
       <br />
     </main>
