--- a/register.html
+++ b/register.html
@@ -309,7 +309,9 @@
             document.getElementById("password").value="";
             document.getElementById("confirmPassword").value="";
             try{
-              const rep=await axios.post("http://192.168.1.121:8080/reg",data);
+              //const rep=await axios.post("http://192.168.1.121:8080/reg",data);
+              const rep=await axios.post("https://galaxy-city-backend.vercel.app/",data);
+              
               if(rep.data.message==="save succes"){
                 alert("Register Success!")
               }else{
