--- a/login.html
+++ b/login.html
@@ -254,7 +254,7 @@
               window.location.href = localStorage.getItem("prePage");
               localStorage.removeItem('prePage');
             }else{
-              window.location.href = '/galaxyCity/profile.html';
+              window.location.href = '/profile.html';
             }
             
            // alert("login success");
