--- a/register.html
+++ b/register.html
@@ -236,10 +236,6 @@
     <div class="container">© 2025 銀河電腦城．版權所有</div>
   </footer>
 
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
->>>>>>> 3eb83f6b86d99ee4ec6cb50f21e6602112f9ddf5
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
     crossorigin="anonymous"></script>
@@ -267,49 +263,12 @@
             const rep = await axios.post("https://galacy-city-backend.vercel.app/reg", data,{
               headers: {
                 'Content-Type': 'application/json'
-<<<<<<< HEAD
-=======
-=======
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
-      crossorigin="anonymous"
-    ></script>
-    <script>
-      if (localStorage.getItem("cartQuantity")) {
-        document.querySelector(".cart-count").textContent =
-          localStorage.getItem("cartQuantity"); //更新購物車數量顯示
-        document.querySelector(".cart-count-col").textContent =
-          localStorage.getItem("cartQuantity"); //更新手機版購物車數量顯示
-      }
-      async function submitForm(){
-        const userName=document.getElementById("username").value;
-        const email=document.getElementById("email").value;
-        const password=document.getElementById("password").value;
-        const confirmPassword=document.getElementById("confirmPassword").value;
-        if(userName!=="" && email!=="" && password!=="" && password!==""){
-          if(password===confirmPassword){ 
-            const data={"name":userName,"email":email,"password":password}
-            document.getElementById("username").value="";
-            document.getElementById("email").value="";
-            document.getElementById("password").value="";
-            document.getElementById("confirmPassword").value="";
-            try{
-              //const rep=await axios.post("http://192.168.1.121:8080/reg",data);
-              const rep=await axios.post("https://galacy-city-backend.vercel.app/reg",data);
-              
-              if(rep.data.message==="save succes"){
-                alert("Register Success!")
-              }else{
-                alert("existing user")
->>>>>>> e64ef1a440f4b9a58886c5063fb28c0fa34b566a
->>>>>>> 3eb83f6b86d99ee4ec6cb50f21e6602112f9ddf5
               }
             });
 
             if (rep.data.name) {
               localStorage.setItem("user", JSON.stringify(rep.data));
-              window.location.href = '/galaxyCity/profile.html';
+              window.location.href = '/profile.html';
             } else {
               alert("existing user")
             }
