--- a/builder.html
+++ b/builder.html
@@ -124,9 +124,9 @@
           <li><a href="productList.html">產品目錄</a></li>
           <li><a href="builder.html">自選砌機報價</a></li>
           <li><a href="about.html">關於我們</a></li>
-          <li>
-            <a href="login.html">登入</a> | <a href="register.html">註冊</a>
-          </li>
+           <li id="loginStatus">
+              <a href="login.html" >登入</a> | <a href="register.html">註冊</a>
+            </li>
           <li>
             <a href="cartPage.html" class="cart-icon"><img src="./img/shoppingCart.png" height="50" /><span
                 class="cart-count">0</span></a>
@@ -141,7 +141,7 @@
         <li><a href="productList.html">產品目錄</a></li>
         <li><a href="builder.html">自選砌機報價</a></li>
         <li><a href="about.html">關於我們</a></li>
-        <li>
+        <li id="loginStatusCol">
           <a href="login.html">登入</a> |
           <a href="register.html">註冊</a>
         </li>
@@ -254,6 +254,7 @@
     integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
     crossorigin="anonymous"></script>
    <script src="builderScript.js"></script>
+   <script src="headerbar.js"></script>
 </body>
 
 </html>
