--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
             <li><a href="productList.html">產品目錄</a></li>
             <li><a href="builder.html">自選砌機報價</a></li>
             <li><a href="about.html">關於我們</a></li>
-            <li>
-              <a href="login.html">登入</a> | <a href="register.html">註冊</a>
+             <li id="loginStatus">
+              <a href="login.html" >登入</a> | <a href="register.html">註冊</a>
             </li>
             <li>
               <a href="cartPage.html" class="cart-icon"
@@ -165,7 +165,7 @@
           <li><a href="productList.html">產品目錄</a></li>
           <li><a href="builder.html">自選砌機報價</a></li>
           <li><a href="about.html">關於我們</a></li>
-          <li>
+          <li id="loginStatusCol">
             <a href="login.html">登入</a> |
             <a href="register.html">註冊</a>
           </li>
@@ -716,5 +716,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="indexScript.js"></script>
+    <script src="headerbar.js"></script>
   </body>
 </html>
