--- a/register.html
+++ b/register.html
@@ -246,6 +246,9 @@
       document.querySelector(".cart-count-col").textContent =
         localStorage.getItem("cartQuantity"); //更新手機版購物車數量顯示
     }
+    if (localStorage.getItem("user")) {
+            window.location.href = '/index.html';
+        } 
     async function submitForm() {
       const userName = document.getElementById("username").value;
       const email = document.getElementById("email").value;
@@ -259,15 +262,16 @@
           document.getElementById("password").value = "";
           document.getElementById("confirmPassword").value = "";
           try {
-            // const rep=await axios.post("http://192.168.1.121:8080/reg",data);
+            //const rep = await axios.post("http://192.168.1.121:8080/reg", data);
             const rep = await axios.post("https://galacy-city-backend.vercel.app/reg", data,{
               headers: {
                 'Content-Type': 'application/json'
               }
             });
 
-            if (rep.data.message === "save success") {
-              alert("Register Success!")
+            if (rep.data.name) {
+              localStorage.setItem("user", JSON.stringify(rep.data));
+              window.location.href = '/profile.html';
             } else {
               alert("existing user")
             }
